Working in Chrome, Firefox, and Ubuntu PDF reader

--- a/final_template/template.xml.j2
+++ b/final_template/template.xml.j2
@@ -7,7 +7,7 @@
 	<fontspec id="1" size="70" family="Times" color="#ffffff"/>
 	<fontspec id="2" size="25" family="Times" color="#ffffff"/>
 <image top="0" left="0" width="1152" height="1544" src="cover.png"/>
-<!-- <text top="0" left="0" width="584" height="89" font="1"><a name="ALL"></a></text> -->
+<text top="0" left="0" width="584" height="89" font="1"><a name="ALL"></a></text>
 <bookmark name="ALL"/>
 <text top="337" left="242" width="416" height="96" font="0"><b>explore key  </b></text>
 <text top="424" left="242" width="504" height="96" font="0"><b>data on the P20</b></text>
@@ -33,7 +33,7 @@
 	<fontspec id="6" size="34" family="Times" color="#453e43"/>
 	<fontspec id="7" size="34" family="Times" color="#453e43"/>
 <image top="8" left="0" width="1152" height="6138" src="toc1.png"/>
-<!-- <text top="0" left="0" width="192" height="96" font="4"><a name="Africa"></a></text> -->
+<text top="0" left="0" width="192" height="96" font="4"><a name="Africa"></a></text>
 <bookmark name="Africa"/>
 <button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
@@ -157,7 +157,7 @@
 </page>
 <page number="3" position="absolute" top="0" left="0" height="5680" width="1152">
 <image top="8" left="0" width="1152" height="5680" src="toc2.png"/>
-<!-- <text top="0" left="0" width="138" height="96" font="4"><a name="Asia"></a></text> -->
+<text top="0" left="0" width="138" height="96" font="4"><a name="Asia"></a></text>
 <bookmark name="Asia"/>
 <button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
@@ -270,7 +270,7 @@
 </page>
 <page number="4" position="absolute" top="0" left="0" height="4266" width="1152">
 <image top="8" left="0" width="1152" height="4266" src="toc3.png"/>
-<!-- <text top="0" left="0" width="467" height="96" font="4"><a name="LAC"></a></text> -->
+<text top="0" left="0" width="467" height="96" font="4"><a name="LAC"></a></text>
 <bookmark name="LAC"/>
 <button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
@@ -356,7 +356,7 @@
 </page>
 <page number="5" position="absolute" top="0" left="0" height="1536" width="1152">
 <image top="8" left="0" width="1152" height="1536" src="toc4.png"/>
-<!-- <text top="0" left="0" width="268" height="96" font="4"><a name="Oceania"></a></text> -->
+<text top="0" left="0" width="268" height="96" font="4"><a name="Oceania"></a></text>
 <bookmark name="Oceania"/>
 <button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
@@ -388,7 +388,7 @@
 </page>
 <page number="6" position="absolute" top="0" left="0" height="4284" width="1152">
 <image top="8" left="0" width="1152" height="4284" src="toc5_shift.png"/>
-<!-- <text top="0" left="0" width="231" height="96" font="4"><a name="Europe"></a></text> -->
+<text top="0" left="0" width="231" height="96" font="4"><a name="Europe"></a></text>
 <bookmark name="Europe"/>
 <button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
@@ -478,7 +478,7 @@
 </page>
 <page number="7" position="absolute" top="0" left="0" height="1536" width="1152">
 <image top="8" left="0" width="1152" height="1536" src="toc6.png"/>
-<!-- <text top="0" left="0" width="473" height="96" font="4"><a name="NA"></a></text> -->
+<text top="0" left="0" width="473" height="96" font="4"><a name="NA"></a></text>
 <bookmark name="NA"/>
 <button top="84" left="951" width="111" height="32" pl="45" pr="17" pt="7" pb="25" href="ALL"/>
 <text top="84" left="951" width="111" height="32" font="3"><a href="#ALL"><b>all regions</b></a></text>
@@ -505,7 +505,7 @@
 	<fontspec id="19" size="31" family="Times" color="#f8c1b2"/>
 	<fontspec id="20" size="34" family="Times" color="#aaa6ab"/>
 <image top="0" left="0" width="1152" height="11592" src="li_profile_bg_noc.png"/>
-<!-- <text top="0" left="0" width="594" height="96" font="0"><a name="{{ country.slug }}"></a></text> -->
+<text top="0" left="0" width="594" height="96" font="0"><a name="{{ country.slug }}"></a></text>
 <bookmark name="{{ country.slug }}"/>
 <button top="76" left="832" width="230" height="32" pl="45" pr="17" pt="7" pb="25" href="{{ country.regionslug }}"/>
 <text top="76" left="832" width="230" height="32" font="3"><a href="#{{ country.regionslug }}"><b>all countries in region</b></a></text>
@@ -690,7 +690,7 @@
 {% else %}
 <page number="{{ 8 + loop.index0 }}" position="absolute" top="0" left="0" height="8065" width="1152">
 <image top="0" left="0" width="1152" height="8065" src="hi_profile_bg_noc.png"/>
-<!-- <text top="0" left="0" width="594" height="96" font="0"><a name="{{ country.slug }}"></a></text> -->
+<text top="0" left="0" width="594" height="96" font="0"><a name="{{ country.slug }}"></a></text>
 <bookmark name="{{ country.slug }}"/>
 <button top="76" left="832" width="230" height="32" pl="45" pr="17" pt="7" pb="25" href="{{ country.regionslug }}"/>
 <text top="76" left="832" width="230" height="32" font="3"><a href="#{{ country.regionslug }}"><b>all countries in region</b></a></text>
